# festoCodingChallenge2023

./: .gitignore  README.md
1_tutorial_puzzle1/: CMakeLists.txt
1_tutorial_puzzle1/main/: CMakeLists.txt  main.cpp
1_tutorial_puzzle1/scripts/: create_package.bat
1_tutorial_puzzle1/solver/: CMakeLists.txt
1_tutorial_puzzle1/solver/include/: Solver.h
1_tutorial_puzzle1/solver/src/: Solver.cpp
1_tutorial_puzzle1/solver/tests/: CMakeLists.txt  Solver_tests.cpp
1_tutorial_puzzle3/: CMakeLists.txt  conanfile.py
1_tutorial_puzzle3/trap/include/: Trap.h
1_tutorial_puzzle3/trap/tests/: CMakeLists.txt
2_tutorial_puzzle1/: CMakeLists.txt  conanfile.py
2_tutorial_puzzle1/main/: CMakeLists.txt  main.cpp
2_tutorial_puzzle1/recipe/: CMakeLists.txt
2_tutorial_puzzle1/recipe/include/: RecipeChecker.h
2_tutorial_puzzle1/recipe/src/: RecipeChecker.cpp
2_tutorial_puzzle1/recipe/tests/: CMakeLists.txt  RecipeCheckerTests.cpp
2_tutorial_puzzle3/main/: CMakeLists.txt  main.cpp
2_tutorial_puzzle3/scripts/: create_package.bat
2_tutorial_puzzle3/trap/: CMakeLists.txt
2_tutorial_puzzle3/trap/include/: Trap.h
2_tutorial_puzzle3/trap/src/: Trap.cpp
2_tutorial_puzzle3/trap/tests/: Trap_tests.cpp
3_tutorial_puzzle3/main/: CMakeLists.txt  main.cpp
3_tutorial_puzzle3/trap/: CMakeLists.txt
3_tutorial_puzzle3/trap/src/: Trap.cpp
3_tutorial_puzzle3/trap/tests/: Trap_tests.cpp
